--- a/website/index.html
+++ b/website/index.html
@@ -60,5 +60,6 @@
         <p>&copy; 2025 Blask Mask. All rights reserved.</p>
     </footer>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <a link="google.com"></a>
 </body>
 </html>
